<resources>
    <string name="app_name">ForeverFit</string>
    <string name="started_title">Hello you!</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community!
        <br><b>Login</b> if you already have an account. </br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="illustration_img">illustration_img</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="#00C988"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="login_email">Enter your email</string>
    <string name="login_password">Enter you password</string>
    <string name="login_forgot_pw">Forgot password?</string>
    <string name="login_havent_account">
        I don\'t have an account
        <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#00C988"><b>Register</b></font>
        to get started with the app.
    </string>
    <string name="register_first_name">Enter your first name</string>
    <string name="register_last_name">Enter your last name</string>
    <string name="register_email">Enter your email</string>
    <string name="register_confirm_password">Confirm your password</string>
    <string name="reset_pw_title">Reset your password</string>
    <string name="reset_pw_sub_title">
        <font color ="#00c9B8">Reset Password</font>
        if you forgot your password.
    </string>

    <string name="register_have_account">
        I already have an account
        <font color="#00C9B8"><b>Login</b></font>
    </string>

    <string name="back_to_login">
        Back to
        <font color="#00C9B8"><b>Login</b></font>
    </string>

    //PROFILE
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity level</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target weight</string>
    <string name="mesurment">Mesurment</string>
    <string name="cm">cm</string>
    <string name="feet_inches">feet and inches</string>
    <string name="kg">kg</string>
    <string name="pound">pound</string>


    <string-array name="array_mesurments">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string-array name="array_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="blank"> </string>

    <string-array name="goals_array" textSize="18sp">
        <item>Lose weight</item>
        <item>Maintain weight</item>
        <item>Gain weight</item>
    </string-array>

    <string-array name="activityLevel_array" textSize="18sp">
        <item>Sedentary (little or no exercise)</item>
        <item>Lightly active (exercise 1–3 days/week)</item>
        <item>Moderately active (exercise 3–5 days/week)</item>
        <item>Active (exercise 6–7 days/week)</item>
        <item>Very active (hard exercise 6–7 days/week)</item>
    </string-array>

    <string-array name="gender_array" textSize="18sp">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>